--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chaos Clickers</title>
-</head>
-<body>
-    <p>Hello world</p>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="index.css">
+        <title>Chaos Clicker</title>
+    </head>
+    <body>
+        <div id="clickingMenu"> 
+            <p id="amount">0 crackers</p>
+            <img id="cracker" draggable="false" src="assets/cracker.png">
+        </div>
+        <div>
+            <p>Stuff goes here!!!</p>
+        </div>
+        <div id="quickActions">
+            <img id="toggleMute" draggable="false" src="assets/volume_on.svg">
+            <img id="resetGame" draggable="false" src="assets/delete.svg">
+        </div>
+    </body>
 </html>
+
+<script src="index.js"></script>
