--- a/index.html
+++ b/index.html
@@ -11,14 +11,23 @@
             <p id="amount">0 crackers</p>
             <img id="cracker" draggable="false" src="assets/cracker.png">
         </div>
-        <div>
-            <p>Stuff goes here!!!</p>
+        <div id="upgrades">
+            <h1>Upgrades</h1>
+            <p>Multiplier: <label id="multiplierCount">1</label> - <a href="#" onclick="upgrade('multiplier')">Upgrade for ??? crackers</a></p>
+            <h1>Stats</h1>
+            <p>Crackers per second: <label id="crackersPerSecond">???</label></p>
+            <!-- <p>Exact cracker amount: <label id="exactAmount">???</label></p> -->
+            <p>You've played for: <label id="timePlayed">???</label></p>
         </div>
         <div id="quickActions">
-            <img id="toggleMute" draggable="false" src="assets/volume_on.svg">
-            <img id="resetGame" draggable="false" src="assets/delete.svg">
+            <img id="toggleMute" alt="Mute/unmute music" draggable="false" src="assets/volume_on.svg">
+            <img id="resetGame" alt="Reset game" draggable="false" src="assets/delete.svg">
+            <img id="help" alt="Help" draggable="false" src="assets/help.svg">
+            <img id="save" alt="Save data" draggable="false" src="assets/download.svg">
+            <img id="restore" alt="Load data" draggable="false" src="assets/history.svg">
         </div>
     </body>
 </html>
 
 <script src="index.js"></script>
+<script src="hello.js"></script>
