made the cracker spin

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1>Stats</h1>
             <p>Crackers per second: <label id="crackersPerSecond">???</label></p>
             <!-- <p>Exact cracker amount: <label id="exactAmount">???</label></p> -->
-            <p>You've played for: <label id="timePlayed">???</label></p>
+            <p>Your game started <label id="timePlayed">???</label> ago</p>
         </div>
         <div id="quickActions">
             <img id="toggleMute" alt="Mute/unmute music" draggable="false" src="assets/volume_on.svg">
