--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
         </div>
         <div id="upgrades">
             <h1>Upgrades</h1>
-            <p>Multiplier: <label id="multiplierCount">1</label> - <a href="#" onclick="upgrade('multiplier')">Upgrade for ??? crackers</a></p>
+            <p>Multiplier: <label id="multiplierCount">1</label> - <a href="#">Upgrade for ??? crackers</a></p>
+            <p>Saltines (workers): <label id="saltinesCount">1</label> - <a href="#">Upgrade for ??? crackers</a></p>
             <h1>Stats</h1>
             <p>Crackers per second: <label id="crackersPerSecond">???</label></p>
             <!-- <p>Exact cracker amount: <label id="exactAmount">???</label></p> -->
-            <p>Your game started <label id="timePlayed">???</label> ago</p>
+            <!-- <p>Your game started <label id="timePlayed">???</label> ago</p> -->
         </div>
         <div id="quickActions">
             <img id="toggleMute" alt="Mute/unmute music" draggable="false" src="assets/volume_on.svg">
